[package]
name = "rust-p2p-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
byteorder = "1.4.3"
bytes = { version = "1.4.0", features = ["serde"] }
tokio-util = { version = "0.7.7", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
