[package]
name = "rust-p2p-handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
bitcoin = { version = "0.29.2", features = ["base64"] }
bitcoin_hashes = "0.11.0"
byteorder = "1.4.3"
bytes = { version = "1.4.0", features = ["serde"] }
secp256k1 = { version = "0.26.0", features = ["bitcoin-hashes"] }
sha2 = "0.10.6"
tokio-util = { version = "0.7.7", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
hex = "0.4.3"
