[package]
name = "rust-p2p-handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
# [review]
# I use bitcoin and bitcoin_hashes for checksum calculation only - sha256d so I guess I should be fine
# even with this requirement:
# > The submitted code can not reuse entire preexisting handshake implementations like libp2p_noise/XX
bitcoin = { version = "0.29.2", features = ["base64"] }
bitcoin_hashes = "0.11.0"
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
bytes = { version = "1.4.0", features = ["serde"] }
futures-util = { version = "0.3.26", features = ["sink"] }
tokio = { version = "1.25.0", default-features = false, features = [
    "fs",
    "net",
    "io-util",
    "macros",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { version = "0.7.7", default-features = false, features = [
    "codec",
] }
rand = "0.8.5"

[dev-dependencies]
pretty_assertions = "1.3.0"
hex = "0.4.3"
